# iris

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml  task.sbatch
backend/src/: main.py
backend/src/models/: __init__.py  base.py  blip.py  groq.py  llava.py
backend/src/prompts/: caption.txt  classify.txt
backend/test/: image.py  video.py
frontend/: app.json  package-lock.json  package.json
frontend/app/: index.tsx
